// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ES2015: Classes 1`] = `
"\\"use strict\\";

class Component {
  main() {}
}"
`;

exports[`ES2015: Generator 1`] = `
"\\"use strict\\";

function* idMaker() {
  var index = 0;while (true) yield index++;
}"
`;

exports[`ES2015: Set 1`] = `
"\\"use strict\\";

new Set([1, 2, 3]);"
`;

exports[`ES2016: Exponentiation 1`] = `
"\\"use strict\\";

var result = Math.pow(2, 3);"
`;

exports[`ES2017: Async/Await 1`] = `
"\\"use strict\\";

var _nodentRuntime = require(\\"nodent-runtime\\");

var _nodentRuntime2 = _interopRequireDefault(_nodentRuntime);

function _interopRequireDefault(obj) { return obj && obj.__esModule ? obj : { \\"default\\": obj }; }

function hello() {
  return new Promise(function ($return, $error) {
    return $return();
  }.$asyncbind(this));
}"
`;

exports[`ESNext: Class Properties 1`] = `
"\\"use strict\\";

class Component {
  constructor() {
    this.onClick = () => {};
  }

}"
`;

exports[`ESNext: Object Spread 1`] = `
"\\"use strict\\";

let original = { bar: 10 };let variant = Object.assign({ foo: 1 }, original);"
`;

exports[`Lodash: Async 1`] = `
"\\"use strict\\";

var _parallel2 = require(\\"async/parallel\\");

var _parallel3 = _interopRequireDefault(_parallel2);

function _interopRequireDefault(obj) { return obj && obj.__esModule ? obj : { \\"default\\": obj }; }

(0, _parallel3[\\"default\\"])([]);"
`;

exports[`Lodash: Lodash 1`] = `
"\\"use strict\\";

var _camelCase2 = require(\\"lodash/camelCase\\");

var _camelCase3 = _interopRequireDefault(_camelCase2);

function _interopRequireDefault(obj) { return obj && obj.__esModule ? obj : { \\"default\\": obj }; }

(0, _camelCase3[\\"default\\"])(\\"hello world\\");"
`;

exports[`Lodash: Recompose 1`] = `
"\\"use strict\\";

var _compose2 = require(\\"recompose/compose\\");

var _compose3 = _interopRequireDefault(_compose2);

function _interopRequireDefault(obj) { return obj && obj.__esModule ? obj : { \\"default\\": obj }; }

(0, _compose3[\\"default\\"])([]);"
`;

exports[`React: JSX 1`] = `
"\\"use strict\\";

function render() {
  return React.createElement(
    \\"h1\\",
    null,
    \\"Hello\\"
  );
}"
`;
